ingress/mailhog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  ports:
    - name: http
      port: 8025
      protocol: TCP
      targetPort: 8025
  selector:
    app: mailhog
